added logic for using parameter names in table

--- a/Test/multi_profile_contours.ipynb
+++ b/Test/multi_profile_contours.ipynb
@@ -26,7 +26,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 501,
+   "id": "32d66439",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the lens corresponding parameters (order preserved)\n",
+    "# POW\n",
+    "pow_params = ['Parameters', '$z_{s,fid}$', 'x', 'y', 'e', '$θ_{e}$', '$r_{Ein}$', '$\\gamma$ (PWI)']\n",
+    "\n",
+    "# SIE\n",
+    "sie_params = ['Parameters','$\\sigma$', 'x', 'y', 'e', '$θ_{e}$', '$r_{core}$', 'NaN']\n",
+    "\n",
+    "# NFW \n",
+    "nfw_params = ['Parameters', 'M', 'x', 'y', 'e', '$θ_{e}$', 'c or $r_{s}$', 'NaN']\n",
+    "\n",
+    "# EIN\n",
+    "ein_params = ['Parameters', 'M', 'x', 'y', 'e', '$θ_{e}$', 'c or $r_{s}$', r'$\\alpha_{e}$']\n",
+    "\n",
+    "# SHEAR \n",
+    "shear_params = ['Parameters', '$z_{s,fid}$', 'x', 'y', '$\\gamma$', '$θ_{\\gamma}$', 'NaN', '$\\kappa$']\n",
+    "\n",
+    "# Sersic\n",
+    "sersic_params = ['Parameters', '$M_{tot}$', 'x', 'y', 'e', '$θ_{e}$', '$r_{e}$', '$n$']\n",
+    "\n",
+    "# Cored SIE\n",
+    "cored_sie_params = ['Parameters', 'M', 'x', 'y', 'e', '$θ_{e}$', '$r_{core}$', 'NaN']\n",
+    "\n",
+    "model_list = ['POW', 'SIE', 'ANFW', 'EIN', 'PERT', 'SERS']\n",
+    "model_list_params = [pow_params, sie_params, nfw_params, ein_params, shear_params, sersic_params]\n",
+    "model_params = {\n",
+    "    'POW': pow_params,\n",
+    "    'SIE': sie_params,\n",
+    "    'ANFW': nfw_params,\n",
+    "    'EIN': ein_params,\n",
+    "    'PERT': shear_params,\n",
+    "    'SERS': sersic_params\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 470,
    "id": "abe33919",
    "metadata": {},
    "outputs": [
@@ -50,7 +91,7 @@
        " '------------------------------------------\\n']"
       ]
      },
-     "execution_count": 415,
+     "execution_count": 470,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 471,
    "id": "003328b7",
    "metadata": {},
    "outputs": [
@@ -111,7 +152,7 @@
        " '------------------------------------------\\n']"
       ]
      },
-     "execution_count": 416,
+     "execution_count": 471,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 472,
    "id": "5877ee21",
    "metadata": {},
    "outputs": [
@@ -158,7 +199,7 @@
        " 'pert': [1.0, 20.9, 20.64, 3.0, 100.0, 0.0, 5.0]}"
       ]
      },
-     "execution_count": 417,
+     "execution_count": 472,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 473,
    "id": "5e868be3",
    "metadata": {},
    "outputs": [
@@ -219,7 +260,7 @@
        "[1.0, 20.78, 20.78]"
       ]
      },
-     "execution_count": 418,
+     "execution_count": 473,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 502,
    "id": "cab04da4",
    "metadata": {},
    "outputs": [],
@@ -267,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 504,
    "id": "257241f5",
    "metadata": {},
    "outputs": [
@@ -321,7 +362,7 @@
          "type": "float"
         }
        ],
-       "ref": "1702c38a-948f-43d4-af9c-d2407d190ace",
+       "ref": "62cc5486-050b-4c30-a2ef-ceec137c00e0",
        "rows": [
         [
          "0",
@@ -413,7 +454,7 @@
        "1      pert     1.0    20.9   20.64   3.000  100.00     0.0     5.0"
       ]
      },
-     "execution_count": 420,
+     "execution_count": 504,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 505,
    "id": "a0613fa6",
    "metadata": {},
    "outputs": [],
@@ -434,7 +475,288 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 506,
+   "id": "c2dadf7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final DataFrame with Parameter Headers:\n",
+      "    Lens Name       param1 param2 param3    param4        param5      param6  \\\n",
+      "0  Parameters     $\\sigma$      x      y         e       $θ_{e}$  $r_{core}$   \n",
+      "1       \"sie\"        130.0   20.8  20.75     0.107         23.38         0.0   \n",
+      "2  Parameters  $z_{s,fid}$      x      y  $\\gamma$  $θ_{\\gamma}$         NaN   \n",
+      "3      \"pert\"          1.0   20.9  20.64       3.0         100.0         0.0   \n",
+      "\n",
+      "     param7  \n",
+      "0       NaN  \n",
+      "1       0.0  \n",
+      "2  $\\kappa$  \n",
+      "3       5.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use a single, clear dictionary for mapping. It's easier to manage.\n",
+    "model_params = {\n",
+    "    'POW': pow_params,\n",
+    "    'SIE': sie_params,\n",
+    "    'NFW': nfw_params, # Assuming ANFW maps to NFW params\n",
+    "    'EIN': ein_params,\n",
+    "    'PERT': shear_params, # Assuming PERT maps to SHEAR params\n",
+    "    'SERSIC': sersic_params # Assuming SERS maps to SERSIC\n",
+    "}\n",
+    "# --- The Corrected Logic ---\n",
+    "\n",
+    "# A list to hold our new rows. Each row will be a dictionary.\n",
+    "processed_rows = []\n",
+    "\n",
+    "# Get the column names from the original DataFrame to use for our new header rows.\n",
+    "df_columns = df.columns.tolist()\n",
+    "\n",
+    "# Iterate through each row of the original DataFrame\n",
+    "for index, row in df.iterrows():\n",
+    "    lens_name_val = row['Lens Name']\n",
+    "\n",
+    "    # Check if the 'Lens Name' is a string (like '\"pow\"') before trying string operations\n",
+    "    if isinstance(lens_name_val, str):\n",
+    "        # Clean the name to get a key like 'POW', 'SIE', etc.\n",
+    "        # This removes quotes and converts to uppercase to match the dictionary keys.\n",
+    "        model_key = lens_name_val.strip('\"').upper()\n",
+    "\n",
+    "        # Check if this key exists in our parameter dictionary\n",
+    "        if model_key in model_params:\n",
+    "            # It's a model! First, create and add the header row.\n",
+    "            param_names_list = model_params[model_key]\n",
+    "            \n",
+    "            # Use zip to create a dictionary mapping column names to parameter names\n",
+    "            header_row = dict(zip(df_columns, param_names_list))\n",
+    "            processed_rows.append(header_row)\n",
+    "\n",
+    "    # ALWAYS add the original row (whether it was a model row or a data row)\n",
+    "    processed_rows.append(row.to_dict())\n",
+    "\n",
+    "# Create the final, new DataFrame from our list of processed rows\n",
+    "final_df = pd.DataFrame(processed_rows)\n",
+    "\n",
+    "print(\"Final DataFrame with Parameter Headers:\")\n",
+    "print(final_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 508,
+   "id": "99fed29a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Lens Name",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "param1",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "param2",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "param3",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "param4",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "param5",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "param6",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "param7",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "ref": "0f59b113-9ca7-4711-8dcf-2aab8f56d872",
+       "rows": [
+        [
+         "0",
+         "Parameters",
+         "$\\sigma$",
+         "x",
+         "y",
+         "e",
+         "$θ_{e}$",
+         "$r_{core}$",
+         "NaN"
+        ],
+        [
+         "1",
+         "\"sie\"",
+         "130.0",
+         "20.8",
+         "20.75",
+         "0.107",
+         "23.38",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "2",
+         "Parameters",
+         "$z_{s,fid}$",
+         "x",
+         "y",
+         "$\\gamma$",
+         "$θ_{\\gamma}$",
+         "NaN",
+         "$\\kappa$"
+        ],
+        [
+         "3",
+         "\"pert\"",
+         "1.0",
+         "20.9",
+         "20.64",
+         "3.0",
+         "100.0",
+         "0.0",
+         "5.0"
+        ]
+       ],
+       "shape": {
+        "columns": 8,
+        "rows": 4
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lens Name</th>\n",
+       "      <th>param1</th>\n",
+       "      <th>param2</th>\n",
+       "      <th>param3</th>\n",
+       "      <th>param4</th>\n",
+       "      <th>param5</th>\n",
+       "      <th>param6</th>\n",
+       "      <th>param7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Parameters</td>\n",
+       "      <td>$\\sigma$</td>\n",
+       "      <td>x</td>\n",
+       "      <td>y</td>\n",
+       "      <td>e</td>\n",
+       "      <td>$θ_{e}$</td>\n",
+       "      <td>$r_{core}$</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>\"sie\"</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>20.8</td>\n",
+       "      <td>20.75</td>\n",
+       "      <td>0.107</td>\n",
+       "      <td>23.38</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Parameters</td>\n",
+       "      <td>$z_{s,fid}$</td>\n",
+       "      <td>x</td>\n",
+       "      <td>y</td>\n",
+       "      <td>$\\gamma$</td>\n",
+       "      <td>$θ_{\\gamma}$</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$\\kappa$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\"pert\"</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20.9</td>\n",
+       "      <td>20.64</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Lens Name       param1 param2 param3    param4        param5      param6  \\\n",
+       "0  Parameters     $\\sigma$      x      y         e       $θ_{e}$  $r_{core}$   \n",
+       "1       \"sie\"        130.0   20.8  20.75     0.107         23.38         0.0   \n",
+       "2  Parameters  $z_{s,fid}$      x      y  $\\gamma$  $θ_{\\gamma}$         NaN   \n",
+       "3      \"pert\"          1.0   20.9  20.64       3.0         100.0         0.0   \n",
+       "\n",
+       "     param7  \n",
+       "0       NaN  \n",
+       "1       0.0  \n",
+       "2  $\\kappa$  \n",
+       "3       5.0  "
+      ]
+     },
+     "execution_count": 508,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 477,
    "id": "6bd031ac",
    "metadata": {},
    "outputs": [
@@ -474,7 +796,7 @@
        " 'glafic.quit()']"
       ]
      },
-     "execution_count": 422,
+     "execution_count": 477,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 478,
    "id": "aa2604fa",
    "metadata": {},
    "outputs": [
@@ -535,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 479,
    "id": "388f2183",
    "metadata": {},
    "outputs": [
@@ -556,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 480,
    "id": "83f42768",
    "metadata": {},
    "outputs": [
@@ -581,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 481,
    "id": "c70ad16b",
    "metadata": {},
    "outputs": [
@@ -603,7 +925,7 @@
        "        0.14463267]], dtype='>f4')"
       ]
      },
-     "execution_count": 426,
+     "execution_count": 481,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 482,
    "id": "84d7d163",
    "metadata": {},
    "outputs": [
@@ -677,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 483,
    "id": "83c1a4a6",
    "metadata": {},
    "outputs": [
@@ -730,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 484,
    "id": "1c2cba04",
    "metadata": {},
    "outputs": [
@@ -751,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 485,
    "id": "0df8e097",
    "metadata": {},
    "outputs": [
@@ -778,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 486,
    "id": "821268b3",
    "metadata": {},
    "outputs": [],
@@ -796,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 487,
    "id": "a390cc9f",
    "metadata": {},
    "outputs": [
@@ -856,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 488,
    "id": "917b8f58",
    "metadata": {},
    "outputs": [
@@ -878,7 +1200,7 @@
        "        -2.8098161]], dtype='>f4')"
       ]
      },
-     "execution_count": 433,
+     "execution_count": 488,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 489,
    "id": "93e1ca94",
    "metadata": {},
    "outputs": [
@@ -911,7 +1233,7 @@
        "        2.9901438]], dtype=float32)"
       ]
      },
-     "execution_count": 434,
+     "execution_count": 489,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 490,
    "id": "42dca1ec",
    "metadata": {},
    "outputs": [
@@ -945,7 +1267,7 @@
        "        3.4220095]], dtype=float32)"
       ]
      },
-     "execution_count": 435,
+     "execution_count": 490,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 491,
    "id": "d7b5419b",
    "metadata": {},
    "outputs": [
