syntax error fixed

--- a/Test/gamma_multi_plot.ipynb
+++ b/Test/gamma_multi_plot.ipynb
@@ -816,7 +816,7 @@
     "]\n",
     "\n",
     "for i, ax in enumerate(axes.flat):\n",
-    "    im = ax.imshow(gamma_arrays[i], origin='lower', cmap='coolwarm'))\n",
+    "    im = ax.imshow(gamma_arrays[i], origin='lower', cmap='coolwarm')\n",
     "    ax.set_title(titles[i])\n",
     "    plt.colorbar(im, ax=ax, fraction=0.046, pad=0.04)\n",
     "    ax.axis('off')\n",
