--- a/write_lens.ipynb
+++ b/write_lens.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 339,
    "id": "0986cfd8",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 340,
    "id": "4ec5c4ef",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        " '------------------------------------------\\n']"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 341,
    "id": "8afd3536",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        " '------------------------------------------\\n']"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 341,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 342,
    "id": "250b45f6",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "  0.5737]}"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 343,
    "id": "ffda6c79",
    "metadata": {},
    "outputs": [
@@ -329,7 +329,7 @@
        "[-19.78, 0.03229999999999933, -0.0013299999999993872]"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 343,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 344,
    "id": "f3e9b6a1",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 345,
    "id": "b3634e7f",
    "metadata": {},
    "outputs": [
@@ -406,18 +406,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 346,
    "id": "15deadbb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Lens Name",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "param1",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param2",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param3",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param4",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param5",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param6",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "param7",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "e4bd384d-1296-4f95-8365-c0a083a321a8",
+       "rows": [
+        [
+         "0",
+         "sie",
+         "157.9333",
+         "0.02931999999999846",
+         "-0.021570000000000533",
+         "0.1261772",
+         "-4.523281",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "1",
+         "sers",
+         "79706850000.0",
+         "0.02931999999999846",
+         "-0.021570000000000533",
+         "0.19174",
+         "97.1557",
+         "51.881",
+         "1.4424"
+        ],
+        [
+         "2",
+         "sers",
+         "9487091000.0",
+         "0.02931999999999846",
+         "-0.021570000000000533",
+         "0.58185",
+         "80.9088",
+         "5.97926",
+         "0.5737"
+        ]
+       ],
+       "shape": {
+        "columns": 8,
+        "rows": 3
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lens Name</th>\n",
+       "      <th>param1</th>\n",
+       "      <th>param2</th>\n",
+       "      <th>param3</th>\n",
+       "      <th>param4</th>\n",
+       "      <th>param5</th>\n",
+       "      <th>param6</th>\n",
+       "      <th>param7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sie</td>\n",
+       "      <td>1.579333e+02</td>\n",
+       "      <td>0.02932</td>\n",
+       "      <td>-0.02157</td>\n",
+       "      <td>0.126177</td>\n",
+       "      <td>-4.523281</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sers</td>\n",
+       "      <td>7.970685e+10</td>\n",
+       "      <td>0.02932</td>\n",
+       "      <td>-0.02157</td>\n",
+       "      <td>0.191740</td>\n",
+       "      <td>97.155700</td>\n",
+       "      <td>51.88100</td>\n",
+       "      <td>1.4424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sers</td>\n",
+       "      <td>9.487091e+09</td>\n",
+       "      <td>0.02932</td>\n",
+       "      <td>-0.02157</td>\n",
+       "      <td>0.581850</td>\n",
+       "      <td>80.908800</td>\n",
+       "      <td>5.97926</td>\n",
+       "      <td>0.5737</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Lens Name        param1   param2   param3    param4     param5    param6  \\\n",
+       "0       sie  1.579333e+02  0.02932 -0.02157  0.126177  -4.523281   0.00000   \n",
+       "1      sers  7.970685e+10  0.02932 -0.02157  0.191740  97.155700  51.88100   \n",
+       "2      sers  9.487091e+09  0.02932 -0.02157  0.581850  80.908800   5.97926   \n",
+       "\n",
+       "   param7  \n",
+       "0  0.0000  \n",
+       "1  1.4424  \n",
+       "2  0.5737  "
+      ]
+     },
+     "execution_count": 346,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['param2'] = df['param2'] - 20.78\n",
-    "df['param3'] = df['param3'] - 20.78"
+    "df['param3'] = df['param3'] - 20.78\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 347,
    "id": "d25c3cb5",
    "metadata": {},
    "outputs": [
@@ -427,7 +603,7 @@
        "['#!/usr/bin/env python\\n',\n",
        " 'import glafic\\n',\n",
        " '\\n',\n",
-       " \"glafic.init(0.3, 0.7, -1.0, 0.7, 'Sersic/SIE/SIE_POS', -0.78, -0.78, 0.78, 0.78, 0.012, 0.012, 1, verb = 0)\\n\",\n",
+       " \"glafic.init(0.3, 0.7, -1.0, 0.7, 'Write Lens/SIE_POS_SHEAR', -0.78, -0.78, 0.78, 0.78, 0.012, 0.012, 1, verb = 0)\\n\",\n",
        " '\\n',\n",
        " \"glafic.set_secondary('chi2_splane 1', verb = 0)\\n\",\n",
        " \"glafic.set_secondary('chi2_checknimg 0', verb = 0)\\n\",\n",
@@ -436,18 +612,18 @@
        " \"glafic.set_secondary('hvary          0', verb = 0)\\n\",\n",
        " \"glafic.set_secondary('ran_seed -122000', verb = 0)\\n\",\n",
        " '\\n',\n",
-       " 'glafic.startup_setnum(3)\\n',\n",
-       " 'glafic.set_lens(1, \"sie\", 0.261343256161012, 157.9333, 0.02931999999999846, -0.021570000000000533, 0.1261772, -4.523281, 0.0, 0.0)\\n',\n",
-       " 'glafic.set_lens(2, \"sers\", 0.261343256161012, 79706850000.0, 0.02931999999999846, -0.021570000000000533, 0.19174, 97.1557, 51.881, 1.4424)\\n',\n",
-       " 'glafic.set_lens(3, \"sers\", 0.261343256161012, 9487091000.0, 0.02931999999999846, -0.021570000000000533, 0.58185, 80.9088, 5.97926, 0.5737)\\n',\n",
-       " '# glafic.set_lens(4)\\n',\n",
-       " 'glafic.set_point(1, 1.000, 20.81896, 20.77744)\\n',\n",
+       " 'glafic.startup_setnum(4, 0, 1)\\n',\n",
+       " 'glafic.set_lens(1, \"sie\", 0.261343256161012, 157.7517, 0.032639999999997116, -0.020230000000001525, 0.1379965, 14.824, 0.0, 0.0)\\n',\n",
+       " 'glafic.set_lens(2, \"sers\", 0.261343256161012, 78229340000.0, 0.032639999999997116, -0.020230000000001525, 0.19174, 97.1557, 51.881, 1.4424)\\n',\n",
+       " 'glafic.set_lens(3, \"sers\", 0.261343256161012, 10269910000.0, 0.032639999999997116, -0.020230000000001525, 0.58185, 80.9088, 5.97926, 0.5737)\\n',\n",
+       " 'glafic.set_lens(4, \"pert\", 0.261343256161012, 1.0, 0.10501000000000005, -0.12945000000000206, 0.03150772, 135.2195, 0.0, 0.0)\\n',\n",
+       " 'glafic.set_point(1, 1.000, 0.03895999999999944, -0.0025600000000025602)\\n',\n",
        " '\\n',\n",
-       " 'glafic.setopt_lens(1, 0, 0, 0, 0, 0, 0, 0, 0)\\n',\n",
-       " 'glafic.setopt_lens(2, 0, 0, 0, 0, 0, 0, 0, 0)\\n',\n",
-       " 'glafic.setopt_lens(3, 0, 0, 0, 0, 0, 0, 0, 0)\\n',\n",
-       " '# glafic.setopt_lens(4, 0, 0, 0, 0, 0, 0, 0, 0)\\n',\n",
-       " 'glafic.setopt_point(1, 0, 0, 0)\\n',\n",
+       " 'glafic.setopt_lens(1, 0, 0, 1, 1, 1, 1, 1, 0)\\n',\n",
+       " 'glafic.setopt_lens(2, 0, 1, 1, 1, 0, 0, 0, 0)\\n',\n",
+       " 'glafic.setopt_lens(3, 0, 1, 1, 1, 0, 0, 0, 0)\\n',\n",
+       " 'glafic.setopt_lens(4, 0, 0, 0, 0, 0, 0, 0, 0)\\n',\n",
+       " 'glafic.setopt_point(1, 0, 1, 1)\\n',\n",
        " '\\n',\n",
        " '# model_init needs to be done again whenever model parameters are changed\\n',\n",
        " 'glafic.model_init(verb = 0)\\n',\n",
@@ -457,7 +633,7 @@
        " 'glafic.quit()']"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 348,
    "id": "de867b36",
    "metadata": {},
    "outputs": [
@@ -491,7 +667,7 @@
       "#!/usr/bin/env python\n",
       "import glafic\n",
       "\n",
-      "glafic.init(0.3, 0.7, -1.0, 0.7, 'Sersic/SIE/SIE_POS', -0.78, -0.78, 0.78, 0.78, 0.012, 0.012, 1, verb = 0)\n",
+      "glafic.init(0.3, 0.7, -1.0, 0.7, 'Write Lens/SIE_POS', -0.78, -0.78, 0.78, 0.78, 0.012, 0.012, 1, verb = 0)\n",
       "\n",
       "glafic.set_secondary('chi2_splane 1', verb = 0)\n",
       "glafic.set_secondary('chi2_checknimg 0', verb = 0)\n",
@@ -500,18 +676,18 @@
       "glafic.set_secondary('hvary          0', verb = 0)\n",
       "glafic.set_secondary('ran_seed -122000', verb = 0)\n",
       "\n",
-      "glafic.startup_setnum(3)\n",
+      "glafic.startup_setnum(3, 0, 1)\n",
       "glafic.set_lens(1, \"sie\", 0.261343256161012, 157.9333, 0.02931999999999846, -0.021570000000000533, 0.1261772, -4.523281, 0.0, 0.0)\n",
       "glafic.set_lens(2, \"sers\", 0.261343256161012, 79706850000.0, 0.02931999999999846, -0.021570000000000533, 0.19174, 97.1557, 51.881, 1.4424)\n",
       "glafic.set_lens(3, \"sers\", 0.261343256161012, 9487091000.0, 0.02931999999999846, -0.021570000000000533, 0.58185, 80.9088, 5.97926, 0.5737)\n",
       "# glafic.set_lens(4)\n",
       "glafic.set_point(1, 1.000, 0.03229999999999933, -0.0013299999999993872)\n",
       "\n",
-      "glafic.setopt_lens(1, 0, 0, 0, 0, 0, 0, 0, 0)\n",
-      "glafic.setopt_lens(2, 0, 0, 0, 0, 0, 0, 0, 0)\n",
-      "glafic.setopt_lens(3, 0, 0, 0, 0, 0, 0, 0, 0)\n",
+      "glafic.setopt_lens(1, 0, 0, 1, 1, 1, 1, 1, 0)\n",
+      "glafic.setopt_lens(2, 0, 1, 1, 1, 0, 0, 0, 0)\n",
+      "glafic.setopt_lens(3, 0, 1, 1, 1, 0, 0, 0, 0)\n",
       "# glafic.setopt_lens(4, 0, 0, 0, 0, 0, 0, 0, 0)\n",
-      "glafic.setopt_point(1, 0, 0, 0)\n",
+      "glafic.setopt_point(1, 0, 1, 1)\n",
       "\n",
       "# model_init needs to be done again whenever model parameters are changed\n",
       "glafic.model_init(verb = 0)\n",
@@ -531,7 +707,7 @@
     "    lines = f.readlines()\n",
     "\n",
     "num_lens_profiles = len(df)\n",
-    "lens_name = (model_path + '/' + model_ver).strip(\"'\\\"\")\n",
+    "lens_name = ('Write Lens' + '/' + model_ver).strip(\"'\\\"\")\n",
     "print(f\"Processing for {num_lens_profiles} lens profiles. Final state will be determined by this number.\")\n",
     "\n",
     "new_lines = []\n",
@@ -610,7 +786,7 @@
     "    \n",
     "    # --- Other standard replacements ---\n",
     "    elif 'glafic.startup_setnum(' in line:\n",
-    "        new_lines.append(f\"glafic.startup_setnum({num_lens_profiles})\\n\")\n",
+    "        new_lines.append(f\"glafic.startup_setnum({num_lens_profiles}, 0, 1)\\n\")\n",
     "    elif 'glafic.init' in line:\n",
     "        new_lines.append(f\"glafic.init(0.3, 0.7, -1.0, 0.7, '{lens_name}', -0.78, -0.78, 0.78, 0.78, 0.012, 0.012, 1, verb = 0)\\n\")\n",
     "    else:\n",
