--- a/write_lens.ipynb
+++ b/write_lens.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 136,
    "id": "0986cfd8",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "id": "4ec5c4ef",
    "metadata": {},
    "outputs": [
@@ -39,76 +39,44 @@
      "data": {
       "text/plain": [
        "['------------------------------------------\\n',\n",
-       " 'optimize ndim=9\\n',\n",
-       " 'run 1: 324 lens models calculated\\n',\n",
-       " 'chi^2 = 4.779190e+02  [N_data(extend): 0]\\n',\n",
+       " 'optimize ndim=8\\n',\n",
+       " 'run 1: 47 lens models calculated\\n',\n",
+       " 'chi^2 = 1.884065e+02  [N_data(extend): 0]\\n',\n",
        " ' extend     : 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
-       " ' point no 1 : 4.779190e+02 4.779190e+02 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
+       " ' point no 1 : 1.884065e+02 1.884065e+02 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
        " ' lens prior : 0.000000e+00\\n',\n",
        " ' map prior  : 0.000000e+00\\n',\n",
        " '\\n',\n",
        " 'omega = 0.3000  lambda = 0.7000  weos = -1.0000  hubble = 0.7000\\n',\n",
        " '\\n',\n",
-       " 'lens   pow     0.2613  1.000000e+00  2.080827e+01  2.077025e+01  7.014046e-02 -1.381826e+01  4.892524e-01  2.500000e+00 \\n',\n",
-       " 'lens   pert    0.2613  1.000000e+00  2.090000e+01  2.064000e+01  5.670990e-03  2.386343e+01  0.000000e+00  0.000000e+00 \\n',\n",
-       " 'point  1.0000  2.080918e+01  2.077863e+01 \\n',\n",
+       " 'lens   pow     0.2613  1.000000e+00  2.080971e+01  2.075928e+01  1.220902e-01 -4.434807e+00  4.911717e-01  1.978297e+00 \\n',\n",
+       " 'point  1.0000  2.081269e+01  2.077956e+01 \\n',\n",
        " '------------------------------------------\\n',\n",
        " '------------------------------------------\\n',\n",
-       " 'optimize ndim=9\\n',\n",
-       " 'run 2: 1120 lens models calculated\\n',\n",
-       " 'chi^2 = 2.576856e-06  [N_data(extend): 0]\\n',\n",
+       " 'optimize ndim=8\\n',\n",
+       " 'run 2: 43 lens models calculated\\n',\n",
+       " 'chi^2 = 1.884041e+02  [N_data(extend): 0]\\n',\n",
        " ' extend     : 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
-       " ' point no 1 : 2.576856e-06 2.576856e-06 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
+       " ' point no 1 : 1.884041e+02 1.884041e+02 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
        " ' lens prior : 0.000000e+00\\n',\n",
        " ' map prior  : 0.000000e+00\\n',\n",
        " '\\n',\n",
        " 'omega = 0.3000  lambda = 0.7000  weos = -1.0000  hubble = 0.7000\\n',\n",
        " '\\n',\n",
-       " 'lens   pow     0.2613  1.000000e+00  2.081134e+01  2.075441e+01  3.070144e-01  6.294977e+00  4.918184e-01  2.500000e+00 \\n',\n",
-       " 'lens   pert    0.2613  1.000000e+00  2.090000e+01  2.064000e+01  3.354290e-02 -3.308407e+01  0.000000e+00  0.000000e+00 \\n',\n",
-       " 'point  1.0000  2.082164e+01  2.079196e+01 \\n',\n",
-       " '------------------------------------------\\n',\n",
-       " '------------------------------------------\\n',\n",
-       " 'optimize ndim=9\\n',\n",
-       " 'run 3: 99 lens models calculated\\n',\n",
-       " 'chi^2 = 2.178829e-06  [N_data(extend): 0]\\n',\n",
-       " ' extend     : 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
-       " ' point no 1 : 2.178829e-06 2.178829e-06 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
-       " ' lens prior : 0.000000e+00\\n',\n",
-       " ' map prior  : 0.000000e+00\\n',\n",
-       " '\\n',\n",
-       " 'omega = 0.3000  lambda = 0.7000  weos = -1.0000  hubble = 0.7000\\n',\n",
-       " '\\n',\n",
-       " 'lens   pow     0.2613  1.000000e+00  2.081134e+01  2.075441e+01  3.070198e-01  6.295211e+00  4.918186e-01  2.500000e+00 \\n',\n",
-       " 'lens   pert    0.2613  1.000000e+00  2.090000e+01  2.064000e+01  3.354417e-02 -3.308404e+01  0.000000e+00  0.000000e+00 \\n',\n",
-       " 'point  1.0000  2.082164e+01  2.079196e+01 \\n',\n",
-       " '------------------------------------------\\n',\n",
-       " '------------------------------------------\\n',\n",
-       " 'optimize ndim=9\\n',\n",
-       " 'run 4: 102 lens models calculated\\n',\n",
-       " 'chi^2 = 2.178829e-06  [N_data(extend): 0]\\n',\n",
-       " ' extend     : 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
-       " ' point no 1 : 2.178829e-06 2.178829e-06 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
-       " ' lens prior : 0.000000e+00\\n',\n",
-       " ' map prior  : 0.000000e+00\\n',\n",
-       " '\\n',\n",
-       " 'omega = 0.3000  lambda = 0.7000  weos = -1.0000  hubble = 0.7000\\n',\n",
-       " '\\n',\n",
-       " 'lens   pow     0.2613  1.000000e+00  2.081134e+01  2.075441e+01  3.070198e-01  6.295211e+00  4.918186e-01  2.500000e+00 \\n',\n",
-       " 'lens   pert    0.2613  1.000000e+00  2.090000e+01  2.064000e+01  3.354417e-02 -3.308404e+01  0.000000e+00  0.000000e+00 \\n',\n",
-       " 'point  1.0000  2.082164e+01  2.079196e+01 \\n',\n",
+       " 'lens   pow     0.2613  1.000000e+00  2.080969e+01  2.075936e+01  1.218513e-01 -4.431856e+00  4.911332e-01  1.977167e+00 \\n',\n",
+       " 'point  1.0000  2.081266e+01  2.077961e+01 \\n',\n",
        " '------------------------------------------\\n']"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Model Opening\n",
-    "model_path = 'POW+SHEAR+FIX'\n",
-    "model_ver = 'POW_POS_SHEAR'\n",
+    "model_path = 'POW'\n",
+    "model_ver = 'POW_POS'\n",
     "lens_name = f'\"{model_path}\"'\n",
     "\n",
     "if 'POS+FLUX' in model_ver:\n",
@@ -126,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 138,
    "id": "8afd3536",
    "metadata": {},
    "outputs": [
@@ -134,28 +102,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last 'optimize' line found at index: 46\n"
+      "Last 'optimize' line found at index: 15\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['run 4: 102 lens models calculated\\n',\n",
-       " 'chi^2 = 2.178829e-06  [N_data(extend): 0]\\n',\n",
+       "['run 2: 43 lens models calculated\\n',\n",
+       " 'chi^2 = 1.884041e+02  [N_data(extend): 0]\\n',\n",
        " ' extend     : 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
-       " ' point no 1 : 2.178829e-06 2.178829e-06 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
+       " ' point no 1 : 1.884041e+02 1.884041e+02 0.000000e+00 0.000000e+00 0.000000e+00\\n',\n",
        " ' lens prior : 0.000000e+00\\n',\n",
        " ' map prior  : 0.000000e+00\\n',\n",
        " '\\n',\n",
        " 'omega = 0.3000  lambda = 0.7000  weos = -1.0000  hubble = 0.7000\\n',\n",
        " '\\n',\n",
-       " 'lens   pow     0.2613  1.000000e+00  2.081134e+01  2.075441e+01  3.070198e-01  6.295211e+00  4.918186e-01  2.500000e+00 \\n',\n",
-       " 'lens   pert    0.2613  1.000000e+00  2.090000e+01  2.064000e+01  3.354417e-02 -3.308404e+01  0.000000e+00  0.000000e+00 \\n',\n",
-       " 'point  1.0000  2.082164e+01  2.079196e+01 \\n',\n",
+       " 'lens   pow     0.2613  1.000000e+00  2.080969e+01  2.075936e+01  1.218513e-01 -4.431856e+00  4.911332e-01  1.977167e+00 \\n',\n",
+       " 'point  1.0000  2.081266e+01  2.077961e+01 \\n',\n",
        " '------------------------------------------\\n']"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 139,
    "id": "250b45f6",
    "metadata": {},
    "outputs": [
@@ -189,20 +156,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of 'lens' lines: 2\n",
-      "['lens', 'pow', '0.2613', '1.000000e+00', '2.081134e+01', '2.075441e+01', '3.070198e-01', '6.295211e+00', '4.918186e-01', '2.500000e+00']\n",
-      "['lens', 'pert', '0.2613', '1.000000e+00', '2.090000e+01', '2.064000e+01', '3.354417e-02', '-3.308404e+01', '0.000000e+00', '0.000000e+00']\n",
-      "Number of lens profiles: 2\n"
+      "Number of 'lens' lines: 1\n",
+      "['lens', 'pow', '0.2613', '1.000000e+00', '2.080969e+01', '2.075936e+01', '1.218513e-01', '-4.431856e+00', '4.911332e-01', '1.977167e+00']\n",
+      "Number of lens profiles: 1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'pow': [1.0, 20.81134, 20.75441, 0.3070198, 6.295211, 0.4918186, 2.5],\n",
-       " 'pert': [1.0, 20.9, 20.64, 0.03354417, -33.08404, 0.0, 0.0]}"
+       "{'pow': [1.0, 20.80969, 20.75936, 0.1218513, -4.431856, 0.4911332, 1.977167]}"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 140,
    "id": "ffda6c79",
    "metadata": {},
    "outputs": [
@@ -259,16 +224,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['point', '1.0000', '2.082164e+01', '2.079196e+01']\n"
+      "['point', '1.0000', '2.081266e+01', '2.077961e+01']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[-19.78, 0.04163999999999746, 0.011959999999998416]"
+       "[-19.78, 0.03265999999999991, -0.00038999999999944635]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 141,
    "id": "f3e9b6a1",
    "metadata": {},
    "outputs": [],
@@ -321,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 142,
    "id": "b3634e7f",
    "metadata": {},
    "outputs": [],
@@ -333,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 143,
    "id": "15deadbb",
    "metadata": {},
    "outputs": [
@@ -387,34 +352,23 @@
          "type": "float"
         }
        ],
-       "ref": "9f05c7ee-db2c-41d2-835b-c33762f72707",
+       "ref": "6bbd9871-aaaf-4779-88f8-176ddc0c7488",
        "rows": [
         [
          "0",
          "pow",
          "1.0",
-         "0.031340000000000146",
-         "-0.025590000000001112",
-         "0.3070198",
-         "6.295211",
-         "0.4918186",
-         "2.5"
-        ],
-        [
-         "1",
-         "pert",
-         "1.0",
-         "0.11999999999999744",
-         "-0.14000000000000057",
-         "0.03354417",
-         "-33.08404",
-         "0.0",
-         "0.0"
+         "0.029689999999998662",
+         "-0.020640000000000214",
+         "0.1218513",
+         "-4.431856",
+         "0.4911332",
+         "1.977167"
         ]
        ],
        "shape": {
         "columns": 8,
-        "rows": 2
+        "rows": 1
        }
       },
       "text/html": [
@@ -451,35 +405,23 @@
        "      <th>0</th>\n",
        "      <td>pow</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.03134</td>\n",
-       "      <td>-0.02559</td>\n",
-       "      <td>0.307020</td>\n",
-       "      <td>6.295211</td>\n",
-       "      <td>0.491819</td>\n",
-       "      <td>2.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>pert</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.12000</td>\n",
-       "      <td>-0.14000</td>\n",
-       "      <td>0.033544</td>\n",
-       "      <td>-33.084040</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.02969</td>\n",
+       "      <td>-0.02064</td>\n",
+       "      <td>0.121851</td>\n",
+       "      <td>-4.431856</td>\n",
+       "      <td>0.491133</td>\n",
+       "      <td>1.977167</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Lens Name  param1   param2   param3    param4     param5    param6  param7\n",
-       "0       pow     1.0  0.03134 -0.02559  0.307020   6.295211  0.491819     2.5\n",
-       "1      pert     1.0  0.12000 -0.14000  0.033544 -33.084040  0.000000     0.0"
+       "  Lens Name  param1   param2   param3    param4    param5    param6    param7\n",
+       "0       pow     1.0  0.02969 -0.02064  0.121851 -4.431856  0.491133  1.977167"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 144,
    "id": "d25c3cb5",
    "metadata": {},
    "outputs": [
@@ -502,7 +444,7 @@
        "['#!/usr/bin/env python\\n',\n",
        " 'import glafic\\n',\n",
        " '\\n',\n",
-       " \"glafic.init(0.3, 0.7, -1.0, 0.7, 'Write Lens/POW_POS_SHEAR', -0.78, -0.78, 0.78, 0.78, 0.0012, 0.0012, 1, verb = 0)\\n\",\n",
+       " \"glafic.init(0.3, 0.7, -1.0, 0.7, 'Write Lens/POW_POS+FLUX_SHEAR', -0.78, -0.78, 0.78, 0.78, 0.0012, 0.0012, 1, verb = 0)\\n\",\n",
        " '\\n',\n",
        " \"glafic.set_secondary('chi2_splane 1', verb = 0)\\n\",\n",
        " \"glafic.set_secondary('chi2_checknimg 0', verb = 0)\\n\",\n",
@@ -511,15 +453,17 @@
        " \"glafic.set_secondary('hvary          0', verb = 0)\\n\",\n",
        " \"glafic.set_secondary('ran_seed -122000', verb = 0)\\n\",\n",
        " '\\n',\n",
-       " 'glafic.startup_setnum(2, 0, 1)\\n',\n",
-       " 'glafic.set_lens(1, \"pow\", 0.261343256161012, 1.0, 0, 0, 0.220021, 10.97197, 0.4905726, 2.5)\\n',\n",
-       " 'glafic.set_lens(2, \"pert\", 0.261343256161012, 1.0, 0, 0, 0.0360604, -28.24128, 0.0, 0.0)\\n',\n",
-       " '# glafic.set_lens(4)\\n',\n",
-       " 'glafic.set_point(1, 1.000, 0.039759999999997575, 0.010439999999999117)\\n',\n",
+       " 'glafic.startup_setnum(4, 0, 1)\\n',\n",
+       " 'glafic.set_lens(1, \"pow\", 0.261343256161012, 1.0, 0, 0, 0.1120995, -5.964733, 0.2080619, 1.777869)\\n',\n",
+       " 'glafic.set_lens(2, \"sers\", 0.261343256161012, 50047960000.0, 0, 0, 0.19174, 97.1557, 2.075204, 1.4424)\\n',\n",
+       " 'glafic.set_lens(3, \"sers\", 0.261343256161012, 9463378000.0, 0, 0, 0.58185, 80.9088, 0.2391704, 0.5737)\\n',\n",
+       " 'glafic.set_lens(4, \"pert\", 0.261343256161012, 1.0, 0, 0, 6.030569e-08, 173.9923, 0.0, 0.0)\\n',\n",
+       " 'glafic.set_point(1, 1.000, 0.033269999999998134, 0.0030199999999993565)\\n',\n",
        " '\\n',\n",
        " 'glafic.setopt_lens(1, 0, 0, 1, 1, 1, 1, 1, 0)\\n',\n",
        " 'glafic.setopt_lens(2, 0, 1, 1, 1, 0, 0, 0, 0)\\n',\n",
-       " '# glafic.setopt_lens(4, 0, 0, 0, 0, 0, 0, 0, 0)\\n',\n",
+       " 'glafic.setopt_lens(3, 0, 1, 1, 1, 0, 0, 0, 0)\\n',\n",
+       " 'glafic.setopt_lens(4, 0, 0, 0, 0, 0, 0, 0, 0)\\n',\n",
        " 'glafic.setopt_point(1, 0, 1, 1)\\n',\n",
        " '\\n',\n",
        " '# model_init needs to be done again whenever model parameters are changed\\n',\n",
@@ -530,7 +474,7 @@
        " 'glafic.quit()']"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 145,
    "id": "d27724ca",
    "metadata": {},
    "outputs": [
@@ -567,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 146,
    "id": "becd6a70",
    "metadata": {},
    "outputs": [],
@@ -578,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 147,
    "id": "de867b36",
    "metadata": {},
    "outputs": [
@@ -586,9 +530,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing for 2 lens profiles. Final state will be determined by this number.\n",
+      "Processing for 1 lens profiles. Final state will be determined by this number.\n",
       "Found and replaced glafic.set_lens(1)\n",
-      "Found and replaced glafic.set_lens(2)\n",
       "State: <=3 lenses. Ensuring 'glafic.set_lens(4)' is a commented placeholder.\n",
       "Found and replaced glafic.set_point(1)\n",
       "State: <=3 lenses. Ensuring 'glafic.setopt_lens(4)' is a commented placeholder.\n",
@@ -597,7 +540,7 @@
       "#!/usr/bin/env python\n",
       "import glafic\n",
       "\n",
-      "glafic.init(0.3, 0.7, -1.0, 0.7, 'Write Lens/POW_POS_SHEAR', -0.78, -0.78, 0.78, 0.78, 0.0012, 0.0012, 1, verb = 0)\n",
+      "glafic.init(0.3, 0.7, -1.0, 0.7, 'Write Lens/POW_POS', -0.78, -0.78, 0.78, 0.78, 0.0012, 0.0012, 1, verb = 0)\n",
       "\n",
       "glafic.set_secondary('chi2_splane 1', verb = 0)\n",
       "glafic.set_secondary('chi2_checknimg 0', verb = 0)\n",
@@ -606,14 +549,16 @@
       "glafic.set_secondary('hvary          0', verb = 0)\n",
       "glafic.set_secondary('ran_seed -122000', verb = 0)\n",
       "\n",
-      "glafic.startup_setnum(2, 0, 1)\n",
-      "glafic.set_lens(1, \"pow\", 0.261343256161012, 1.0, 0, 0, 0.3070198, 6.295211, 0.4918186, 2.5)\n",
-      "glafic.set_lens(2, \"pert\", 0.261343256161012, 1.0, 0, 0, 0.03354417, -33.08404, 0.0, 0.0)\n",
+      "glafic.startup_setnum(1, 0, 1)\n",
+      "glafic.set_lens(1, \"pow\", 0.261343256161012, 1.0, 0, 0, 0.1218513, -4.431856, 0.4911332, 1.977167)\n",
+      "glafic.set_lens(2, \"sers\", 0.261343256161012, 50047960000.0, 0, 0, 0.19174, 97.1557, 2.075204, 1.4424)\n",
+      "glafic.set_lens(3, \"sers\", 0.261343256161012, 9463378000.0, 0, 0, 0.58185, 80.9088, 0.2391704, 0.5737)\n",
       "# glafic.set_lens(4)\n",
-      "glafic.set_point(1, 1.000, 0.04163999999999746, 0.011959999999998416)\n",
+      "glafic.set_point(1, 1.000, 0.03265999999999991, -0.00038999999999944635)\n",
       "\n",
       "glafic.setopt_lens(1, 0, 0, 1, 1, 1, 1, 1, 0)\n",
       "glafic.setopt_lens(2, 0, 1, 1, 1, 0, 0, 0, 0)\n",
+      "glafic.setopt_lens(3, 0, 1, 1, 1, 0, 0, 0, 0)\n",
       "# glafic.setopt_lens(4, 0, 0, 0, 0, 0, 0, 0, 0)\n",
       "glafic.setopt_point(1, 0, 1, 1)\n",
       "\n",
